# skill-test-generator

./: .gitignore  Dockerfile  README.md  dev-config.json  hatch_build.py  launch-config.json  launch.sh  pyproject.toml  run-config.json  run_local.py
src/skill_test_generator/: __init__.py  codegen_agent.py  config.py  json_utils.py  prompts.py  sim_publisher.py  skill_ingestion.py  task_generator.py  variant_generator.py  world.py
templates/reference-screenshots/: manifest.json
templates/sohan/: .env.example  .gitignore  README.md  start.sh  stop.sh  validate.sh
templates/sohan/web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
templates/sohan/web/.storybook/: main.ts
templates/sohan/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
templates/sohan/web/components/: items-dashboard.tsx
templates/sohan/web/db/: bootstrap.ts  client.ts  index.ts  schema.ts  types.ts
templates/sohan/web/drizzle/: 0000_zippy_changeling.sql
templates/sohan/web/drizzle/meta/: 0000_snapshot.json  _journal.json
templates/sohan/web/lib/: api.ts  plato-mutation-logger.ts
templates/sohan/web/lib/contracts/: items.ts
templates/sohan/web/lib/query/: items.ts
templates/sohan/web/lib/server/: items-repo.ts
templates/sohan/web/lib/state/: ui-store.ts
templates/sohan/web/tests/backend/: db-bootstrap.test.ts  db-client.test.ts  db-index.test.ts  define-server-action.test.ts  items-actions.test.ts  items-repo.test.ts
templates/sohan/web/tests/frontend/: items-dashboard.test.tsx
(+7 files in other folders)
