[project]
name = "plato-world-skill-test-generator"
version = "0.4.12"
description = "Generate targeted skill-test simulators from benchmark review skill gaps"
requires-python = ">=3.11"
dependencies = [
    "plato-sdk-v2>=2.35.8",
    "anthropic>=0.43",
    "boto3>=1.34",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.25.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling", "plato-sdk-v2>=2.35.8"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_test_generator"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[project.entry-points."plato.worlds"]
plato-world-skill-test-generator = "skill_test_generator:SkillTestGeneratorWorld"
